--- a/src/components/home/HomeCharts.astro
+++ b/src/components/home/HomeCharts.astro
@@ -209,7 +209,8 @@ const linePath = points.reduce((acc: string, p: any, i: number) =>
 
         <div class="w-full md:w-1/2 flex justify-center relative">
              <div class="relative w-48 h-48">
-                <svg viewBox="0 0 100 100" class="w-full h-full -rotate-90">
+                <!-- Expanded viewBox to prevent clipping on hover scale -->
+                <svg viewBox="-10 -10 120 120" class="w-full h-full -rotate-90 overflow-visible">
                     {donutData.map(slice => (
                         <a href={`/horizon_dashboard/groups?search=${encodeURIComponent(slice.name)}`} class="group/slice">
                             <path 
